Fixed basic layout issue in nav

--- a/src/css/Nav.module.css
+++ b/src/css/Nav.module.css
@@ -48,7 +48,6 @@
 @media screen and (max-width: 768px) {
   .nav {
     position: relative;
-    padding: 5px;
   }
   .nav_content {
     margin-right: 10px;
@@ -67,7 +66,7 @@
   .mobile {
     display: block;
     position: absolute;
-    top: 70px;
+    top: 9vh;
     left: 0;
     width: 100%;
     height: 100vh;
